--- a/src/Stylesheets/Profile.scss
+++ b/src/Stylesheets/Profile.scss
@@ -1,3 +1,5 @@
+
+
 .profile_container{
     padding:30px 30px;
 
@@ -9,9 +11,9 @@
         gap:40px;
         align-items: center;
         .img{
-            width:80px;
-            height:50px;
-            margin-bottom:10px;
+            width:100px;
+            height:110px;
+            margin-top:-1.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -19,7 +21,7 @@
              cursor:pointer;
             }
             img{
-                max-width:100%;
+                max-width:80%;
             }
             
         }
@@ -49,4 +51,11 @@
         }
     }
 
+}
+.infoContainer {
+    margin-left: 260px;
+    margin-top: 20px;
+    margin-right: 10px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.05) !important;
 }
